build: Release 6.9.3